@@ -1032,6 +1032,14 @@
             "hugopl"
          ]
       },
+      "Hyowon Kim" : {
+         "emails" : [
+            "hw1008.kim@samsung.com"
+         ],
+         "nicks" : [
+            "hyowon"
+         ]
+      },
       "Ian Vollick" : {
          "emails" : [
             "vollick@chromium.org"
