@@ -1,3 +1,9 @@
+2014-07-06  Hyowon Kim  <hw1008.kim@samsung.com>
+
+        Unreviewed. Adding myself to committers.
+
+        * Scripts/webkitpy/common/config/contributors.json:
+
 2014-07-05  KwangHyuk Kim  <hyuki.kim@samsung.com>
 
         [EFL] Add libgeoclue-dev to Tools/efl/install-dependencies.
